draft-dijkstra-urn-ogf-05

--- a/draft-dijkstra-urn-ogf-05.html
+++ b/draft-dijkstra-urn-ogf-05.html
@@ -423,7 +423,7 @@
   </table>
 
   <p class="title">A URN Namespace for the Open Grid Forum (OGF)<br />
-  <span class="filename">draft-dijkstra-urn-ogf-04</span></p>
+  <span class="filename">draft-dijkstra-urn-ogf-05</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes a URN (Uniform Resource Name) namespace that is engineered by the Open Grid Forum (OGF) for naming persistent resources.</p>
@@ -564,12 +564,13 @@
 <p id="rfc.section.2.10.p.2">The rules for lexical equivalence of the SUBNAMESPACE-SPECIFIC-STRING part of URNs in the OGF hierarchy is specific for each SNID and MUST be defined when a SNID is assigned by the OGF Technical Director. These definitions MUST included information about case sensitivity, and in case %-escaped octets, MUST define the exact normalisation to use (e.g. interpret as octet, interpret as UTF-8, specify type of Unicode normalisation factor, etc.)</p>
 <h1 id="rfc.section.2.11">
 <a href="#rfc.section.2.11">2.11.</a> Conformance with URN Syntax</h1>
-<p id="rfc.section.2.11.p.1">The intention of this document is to only restrict the syntax of the SNID, and have Grid Forum Documents specify the syntax of the SUBNAMESPACE-SPECIFIC-STRING.</p>
+<p id="rfc.section.2.11.p.1">The intention of this document is to only restrict the syntax of the SNID, and have Grid Forum Documents specify the syntax of the SUBNAMESPACE-SPECIFIC-STRING. Hence:</p>
 <div id="#rfc.figure.4"></div>
 <pre>
    SUBNAMESPACE-SPECIFIC-STRING  =  1*&lt;URN chars&gt;
 </pre>
-<p id="rfc.section.2.11.p.2">It is RECOMMENDED that documents defining a subnamespace identifier forbid the assignment of characters in the &lt;reserved&gt; set ("%", "/", "?" and "#") as defined in <a href="#RFC2141">[RFC2141]</a>.  For forward compatibility, it is RECOMMENDED that software implementations that accept generic OGF URNs, but don't do subnamespace specific validity checks, allow all characters defined by pchar in <a href="#RFC3986">[RFC3986]</a>.  pchar contains the characters in &lt;URN-char&gt;, as well as "&amp;" and "~".</p>
+<p id="rfc.section.2.11.p.2">Documents defining a subnamespace identifier SHOULD specify further syntactic restrictions in SUBNAMESPACE-SPECIFIC-STRING.  It is RECOMMENDED that these documents forbid the assignment of URNs containing characters in the &lt;reserved&gt; set ("%", "/", "?", and "#") as defined in <a href="#RFC2141">[RFC2141]</a>. </p>
+<p id="rfc.section.2.11.p.3">For forward compatibility, it is RECOMMENDED that software implementations that accept generic OGF URNs, but don't make subnamespace-specific validity checks, allow all characters defined by pchar in <a href="#RFC3986">[RFC3986]</a>.  pchar contains the characters in &lt;URN-char&gt;, as well as "&amp;" and "~".</p>
 <h1 id="rfc.section.2.12">
 <a href="#rfc.section.2.12">2.12.</a> Validation mechanism</h1>
 <p id="rfc.section.2.12.p.1">The validation mechanism of URNs in the OGF hierarchy is specific for each SNID and SHOULD be defined when a SNID is assigned by the OGF Technical Director.</p>
@@ -615,7 +616,7 @@
 <p id="rfc.section.7.p.1">IANA is kindly requested to register the "ogf" namespace identifier (NID) at the <a href="#URN-NAMESPACES">URN Namespaces registry</a> <cite title="NONE">[URN-NAMESPACES]</cite> and refer to this document and/or the website <a href="http://www.ogf.org/urn/">http://www.ogf.org/urn/</a>.</p>
 <h1 id="rfc.section.8">
 <a href="#rfc.section.8">8.</a> Acknowledgements</h1>
-<p id="rfc.section.8.p.1">The authors would like to thank Joel Replogle and Andre Mersky for helping set up the urn:ogf registry, and Jeroen van der Ham for proof-reading this document. The template and useful examples from <a href="#RFC3406">[RFC3406]</a> formed the basis for this document.</p>
+<p id="rfc.section.8.p.1">The authors would like to thank Joel Replogle and Andre Mersky for helping set up the urn:ogf registry, and Jeroen van der Ham and Peter Saint-Andre for proof-reading this document. The template and useful examples from <a href="#RFC3406">[RFC3406]</a> formed the basis for this document.</p>
 <h1 id="rfc.references">
 <a href="#rfc.references">9.</a> References</h1>
 <h1 id="rfc.references.1">
