draft-ietf-ntp-autokey-08

--- a/draft-ietf-ntp-autokey-08.html
+++ b/draft-ietf-ntp-autokey-08.html
@@ -155,11 +155,11 @@
 <tr><td class="header">Network Working Group</td><td class="header">B. Haberman, Ed.</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">JHU/APL</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">D. Mills</td></tr>
-<tr><td class="header">Expires: May 16, 2010</td><td class="header">U. Delaware</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">November 12, 2009</td></tr>
+<tr><td class="header">Expires: September 6, 2010</td><td class="header">U. Delaware</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">March 05, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Network Time Protocol Version 4
-    Autokey Specification<br />draft-ietf-ntp-autokey-07</h1>
+    Autokey Specification<br />draft-ietf-ntp-autokey-08</h1>
 
 <h3>Abstract</h3>
 
@@ -188,11 +188,11 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on May 16, 2010.</p>
+This Internet-Draft will expire on September 6, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
@@ -1662,6 +1662,10 @@ SET {
 }
 </pre></div>
 <p>For trusted host certificates the subject and issuer HostName is the NTP name of the group, while for all other host certificates the subject and issuer HostName is the NTP name of the host. In the reference implementation if these names are not explicitly specified, they default to the string returned by the Unix gethostname() routine (trailing NUL removed). For other than self-signed certificates, the issuer HostName is the unique DNS name of the host signing the certificate.
+</p>
+<p>It should be noted that the Autokey protocol itself has no provisions to revoke certificates. The reference implementation is purposely restarted about once a week, leading to the regeneration of the certificate and a restart of the Auokey protocol. This restart is not enforced for the Autokey protocol but rather for NTP functionality reasons.
+</p>
+<p>Each group host operates with only one certificate at a time and constructs a trail by induction. Since the group configuration must form an acyclic graph, with roots at the trusted hosts, it does not matter which, of possibly several, signed certificates is used. The reference implementation chooses a single certificate and operates with only that certificate until the protocol is restarted.
 </p>
 <a name="rfc.authors"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
