--- a/draft-ietf-grow-mrt-17.html
+++ b/draft-ietf-grow-mrt-17.html
@@ -461,7 +461,7 @@
   </table>
 
   <p class="title">MRT routing information export format<br />
-  <span class="filename">draft-ietf-grow-mrt-16.txt</span></p>
+  <span class="filename">draft-ietf-grow-mrt-17.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes the MRT format for routing information export.  This format was developed in concert with the Multi-threaded Routing Toolkit (MRT) from whence the format takes it name.  The format can be used to export routing protocol messages, state changes, and routing information base contents.</p>
@@ -1025,26 +1025,26 @@
 <pre>
          Name             Value       Definition
          ----             -----       ----------
-         NULL             0
-         START            1
-         DIE              2
-         I_AM_DEAD        3
-         PEER_DOWN        4
-         BGP              5
-         RIP              6
-         IDRP             7
-         RIPNG            8
-         BGP4PLUS         9
-         BGP4PLUS_01      10
-         OSPFv2           11          See Section 4.2
-         TABLE_DUMP       12          See Section 4.3
-         TABLE_DUMP_v2    13          See Section 4.5
+         NULL             0           See Section B.1.1
+         START            1           See Section B.1.2
+         DIE              2           See Section B.1.3
+         I_AM_DEAD        3           See Section B.1.4
+         PEER_DOWN        4           See Section B.1.5
+         BGP              5           See Section B.2.1
+         RIP              6           See Section B.2.2
+         IDRP             7           See Section B.2.3
+         RIPNG            8           See Section B.2.4
+         BGP4PLUS         9           See Section B.2.5
+         BGP4PLUS_01      10          See Section B.2.5
+         OSPFv2           11          See Section 4.1
+         TABLE_DUMP       12          See Section 4.2
+         TABLE_DUMP_v2    13          See Section 4.3
          BGP4MP           16          See Section 4.4
          BGP4MP_ET        17          See Section 4.4
-         ISIS             32          See Section 4.4
-         ISIS_ET          33          See Section 4.4
-         OSPFv3           48          See Section 4.4
-         OSPFv3_ET        49          See Section 4.4
+         ISIS             32          See Section 4.5
+         ISIS_ET          33          See Section 4.5
+         OSPFv3           48          See Section 4.6
+         OSPFv3_ET        49          See Section 4.6
 </pre>
 <h1 id="rfc.section.5.4">
 <a href="#rfc.section.5.4">5.4.</a> Defined BGP, BGP4PLUS, and BGP4PLUS_01 Subtype Codes</h1>
@@ -1053,14 +1053,14 @@
 <pre>
          Name               Value       Definition
          ----               -----       ----------
-         BGP_NULL           0
-         BGP_UPDATE         1
-         BGP_PREF_UPDATE    2
-         BGP_STATE_CHANGE   3
-         BGP_SYNC           4
-         BGP_OPEN           5
-         BGP_NOTIFY         6
-         BGP_KEEPALIVE      7
+         BGP_NULL           0           See Section B.2.1
+         BGP_UPDATE         1           See Section B.2.1
+         BGP_PREF_UPDATE    2           See Section B.2.1
+         BGP_STATE_CHANGE   3           See Section B.2.1
+         BGP_SYNC           4           See Section B.2.1
+         BGP_OPEN           5           See Section B.2.1
+         BGP_NOTIFY         6           See Section B.2.1
+         BGP_KEEPALIVE      7           See Section B.2.1
 </pre>
 <h1 id="rfc.section.5.5">
 <a href="#rfc.section.5.5">5.5.</a> Defined TABLE_DUMP Subtype Codes</h1>
@@ -1069,8 +1069,8 @@
 <pre>
          Name                Value       Definition
          ----                -----       ----------
-         AFI_IPv4            1
-         AFI_IPv6            2
+         AFI_IPv4            1           See Section 4.2
+         AFI_IPv6            2           See Section 4.2
 </pre>
 <h1 id="rfc.section.5.6">
 <a href="#rfc.section.5.6">5.6.</a> Defined TABLE_DUMP_V2 Subtype Codes</h1>
@@ -1079,12 +1079,12 @@
 <pre>
          Name                Value       Definition
          ----                -----       ----------
-         PEER_INDEX_TABLE    1
-         RIB_IPV4_UNICAST    2
-         RIB_IPV4_MULTICAST  3
-         RIB_IPV6_UNICAST    4
-         RIB_IPV6_MULTICAST  5
-         RIB_GENERIC         6
+         PEER_INDEX_TABLE    1           See Section 4.3
+         RIB_IPV4_UNICAST    2           See Section 4.3
+         RIB_IPV4_MULTICAST  3           See Section 4.3
+         RIB_IPV6_UNICAST    4           See Section 4.3
+         RIB_IPV6_MULTICAST  5           See Section 4.3
+         RIB_GENERIC         6           See Section 4.3
 </pre>
 <h1 id="rfc.section.5.7">
 <a href="#rfc.section.5.7">5.7.</a> Defined BGP4MP and BGP4MP_ET Subtype Codes</h1>
@@ -1093,14 +1093,14 @@
 <pre>
          Name                     Value       Definition
          ----                     -----       ----------
-         BGP4MP_STATE_CHANGE      0
-         BGP4MP_MESSAGE           1
-         BGP4MP_ENTRY             2
-         BGP4MP_SNAPSHOT          3
-         BGP4MP_MESSAGE_AS4       4
-         BGP4MP_STATE_CHANGE_AS4  5
-         BGP4MP_MESSAGE_LOCAL     6
-         BGP4MP_MESSAGE_AS4_LOCAL 7
+         BGP4MP_STATE_CHANGE      0           See Section 4.4
+         BGP4MP_MESSAGE           1           See Section 4.4
+         BGP4MP_ENTRY             2           See Section 4.4
+         BGP4MP_SNAPSHOT          3           See Section 4.4
+         BGP4MP_MESSAGE_AS4       4           See Section 4.4
+         BGP4MP_STATE_CHANGE_AS4  5           See Section 4.4
+         BGP4MP_MESSAGE_LOCAL     6           See Section 4.4
+         BGP4MP_MESSAGE_AS4_LOCAL 7           See Section 4.4
 </pre>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> Security Considerations</h1>
