draft-igoe-secsh-x509v3-06

--- a/draft-igoe-secsh-x509v3-06.html
+++ b/draft-igoe-secsh-x509v3-06.html
@@ -154,10 +154,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">K. Igoe</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">National Security Agency</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">D. Stebila</td></tr>
-<tr><td class="header">Expires: February 13, 2011</td><td class="header">Queensland&nbsp;University&nbsp;of&nbsp;Technology</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">August 12, 2010</td></tr>
+<tr><td class="header">Expires: April 8, 2011</td><td class="header">Queensland&nbsp;University&nbsp;of&nbsp;Technology</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">October 5, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />X.509v3 Certificates for Secure Shell Authentication<br />draft-igoe-secsh-x509v3-05</h1>
+<h1><br />X.509v3 Certificates for Secure Shell Authentication<br />draft-igoe-secsh-x509v3-06</h1>
 
 <h3>Abstract</h3>
 
@@ -178,7 +178,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on February 13, 2011.</p>
+This Internet-Draft will expire on April 8, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -276,7 +276,7 @@ Introduction</h3>
 </table>
 <br clear="all" />
 
-<p>Since PGP has its own method for binding a public key to a digital identity, this document focuses solely upon the non-PGP methods.  In particular, this document defines the following public key algorithms which differ from the above solely in their use of X.509v3 certificates to convey the signer's public key.
+<p>Since Pretty Good Privacy (PGP) has its own method for binding a public key to a digital identity, this document focuses solely upon the non-PGP methods.  In particular, this document defines the following public key algorithms which differ from the above solely in their use of X.509v3 certificates to convey the signer's public key.
 </p><table class="full" align="center" border="0" cellpadding="2" cellspacing="2">
 <col align="center">
 <tr><th align="center">Algorithm</th></tr>
@@ -295,9 +295,9 @@ Introduction</h3>
 </table>
 <br clear="all" />
 
-<p>Public keys conveyed using the x509v3-ecdsa-sha2-* public key algorithm can be used with the ecmqv-sha2 key exchange method.
+<p>Public keys conveyed using the x509v3-ecdsa-sha2-* public key algorithms can be used with the ecmqv-sha2 key exchange method.
 </p>
-<p>Implementation of this specification requires familiarity with the Secure Shell protocol <a class='info' href='#RFC4251'>[RFC4251]<span> (</span><span class='info'>Ylonen, T. and C. Lonvick, &ldquo;The Secure Shell (SSH) Protocol Architecture,&rdquo; January&nbsp;2006.</span><span>)</span></a> <a class='info' href='#RFC4253'>[RFC4253]<span> (</span><span class='info'>Ylonen, T. and C. Lonvick, &ldquo;The Secure Shell (SSH) Transport Layer Protocol,&rdquo; January&nbsp;2006.</span><span>)</span></a> and X.509v3 certificates <a class='info' href='#RFC5280'>[RFC5280]<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boeyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+<p>Implementation of this specification requires familiarity with the Secure Shell protocol <a class='info' href='#RFC4251'>[RFC4251]<span> (</span><span class='info'>Ylonen, T. and C. Lonvick, &ldquo;The Secure Shell (SSH) Protocol Architecture,&rdquo; January&nbsp;2006.</span><span>)</span></a> <a class='info' href='#RFC4253'>[RFC4253]<span> (</span><span class='info'>Ylonen, T. and C. Lonvick, &ldquo;The Secure Shell (SSH) Transport Layer Protocol,&rdquo; January&nbsp;2006.</span><span>)</span></a> and X.509v3 certificates <a class='info' href='#RFC5280'>[RFC5280]<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boeyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a>.  Data types used in describing protocol messages are defined in Section 5 of <a class='info' href='#RFC4251'>[RFC4251]<span> (</span><span class='info'>Ylonen, T. and C. Lonvick, &ldquo;The Secure Shell (SSH) Protocol Architecture,&rdquo; January&nbsp;2006.</span><span>)</span></a>.
 </p>
 <p>This document is concerned with SSH implementation details; specification of the underlying cryptographic algorithms and the handling and structure of X.509v3 certificates is left to other standards documents.
 </p>
@@ -323,13 +323,15 @@ Public Key Format</h3>
 </p>
 <p>The key format has the following specific encoding:
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
-  string  "x509v3-ssh-dss" / "x509v3-ssh-rsa" / "x509v3-rsa2048-sha256" /
-          "x509v3-ecdsa-sha2-*"
+  string  "x509v3-ssh-dss" / "x509v3-ssh-rsa" /
+          "x509v3-rsa2048-sha256" / "x509v3-ecdsa-sha2-[identifier]"
   uint32  certificate-count
   string  certificate[1..certificate-count]
   uint32  ocsp-response-count
   string  ocsp-response[0..ocsp-response-count]</pre></div>
-<p>Each certificate and ocsp-response MUST be encoded as a string of octets using the DER encoding of Abstract Syntax Notation One (ASN.1) <a class='info' href='#ASN1'>[ASN1]<span> (</span><span class='info'>International Telecommunications Union, &ldquo;Abstract Syntax Notation One (ASN.1): Specification of basic notation,&rdquo; July&nbsp;2002.</span><span>)</span></a>.  An example of an SSH key exchange involving one of these public key algorithms is given in <a class='info' href='#example'>Appendix&nbsp;A<span> (</span><span class='info'>Example</span><span>)</span></a>.
+<p>In the figure above, the string [identifier] is the identifier of the elliptic curve domain parameters.  The format of this string is specified in Section 6.1 of <a class='info' href='#RFC5656'>[RFC5656]<span> (</span><span class='info'>Stebila, D. and J. Green, &ldquo;Elliptic Curve Algorithm Integration in the Secure Shell Transport Layer,&rdquo; December&nbsp;2009.</span><span>)</span></a>.  Information on the REQUIRED and RECOMMENDED sets of elliptic curve domain parameters for use with this algorithm can be found in Section 10 of <a class='info' href='#RFC5656'>[RFC5656]<span> (</span><span class='info'>Stebila, D. and J. Green, &ldquo;Elliptic Curve Algorithm Integration in the Secure Shell Transport Layer,&rdquo; December&nbsp;2009.</span><span>)</span></a>.
+</p>
+<p>Each certificate and ocsp-response MUST be encoded as a string of octets using the Distinguished Encoding Rules (DER) encoding of Abstract Syntax Notation One (ASN.1) <a class='info' href='#ASN1'>[ASN1]<span> (</span><span class='info'>International Telecommunications Union, &ldquo;Abstract Syntax Notation One (ASN.1): Specification of basic notation,&rdquo; July&nbsp;2002.</span><span>)</span></a>.  An example of an SSH key exchange involving one of these public key algorithms is given in <a class='info' href='#example'>Appendix&nbsp;A<span> (</span><span class='info'>Example</span><span>)</span></a>.
 </p>
 <p>Additionally, the following constraints apply:
 </p>
@@ -357,7 +359,7 @@ Public Key Format</h3>
 </p>
 <p>When no OCSP responses are provided, it is up to the implementation and system administrator to decide whether to accept the certificate or not.  It may be possible for the implementation to retrieve OCSP responses based on the id-ad-ocsp access description in the certificate's Authority Information Access data (Section 4.2.2.1 of <a class='info' href='#RFC5280'>[RFC5280]<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boeyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a>).  However, if the id-ad-ocsp access description indicates that the certificate authority employs OCSP, and no OCSP response information is available, it is RECOMMENDED that the certificate be rejected.
 </p>
-<p><a class='info' href='#RFC5480'>[RFC5480]<span> (</span><span class='info'>Turner, S., Brown, D., Yiu, K., Housley, R., and T. Polk, &ldquo;Elliptic Curve Cryptography Subject Public Key Information,&rdquo; March&nbsp;2009.</span><span>)</span></a> and <a class='info' href='#RFC5758'>[RFC5758]<span> (</span><span class='info'>Dang, Q., Santesson, S., Moriarty, K., Brown, D., and T. Polk, &ldquo;Internet X.509 Public Key Infrastructure: Additional Algorithms and Identifiers for DSA and ECDSA,&rdquo; January&nbsp;2010.</span><span>)</span></a> describes the structure of X.509v3 certificates to be used with ECDSA public keys.  <a class='info' href='#RFC5280'>[RFC5280]<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boeyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a> describes the structure of X.509v3 certificates to be used with RSA and DSA public keys.  <a class='info' href='#RFC5759'>[RFC5759]<span> (</span><span class='info'>Solinas, J. and L. Zieglar, &ldquo;Suite B Certificate and Certificate Revocation List (CRL) Profile,&rdquo; January&nbsp;2010.</span><span>)</span></a> provides additional guidance for ECDSA keys in Suite B X.509v3 certificate and certificate revocation list profiles.
+<p><a class='info' href='#RFC5480'>[RFC5480]<span> (</span><span class='info'>Turner, S., Brown, D., Yiu, K., Housley, R., and T. Polk, &ldquo;Elliptic Curve Cryptography Subject Public Key Information,&rdquo; March&nbsp;2009.</span><span>)</span></a> and <a class='info' href='#RFC5758'>[RFC5758]<span> (</span><span class='info'>Dang, Q., Santesson, S., Moriarty, K., Brown, D., and T. Polk, &ldquo;Internet X.509 Public Key Infrastructure: Additional Algorithms and Identifiers for DSA and ECDSA,&rdquo; January&nbsp;2010.</span><span>)</span></a> describes the structure of X.509v3 certificates to be used with Elliptic Curve Digitial Signature Algorithm (ECDSA) public keys.  <a class='info' href='#RFC5280'>[RFC5280]<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boeyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a> describes the structure of X.509v3 certificates to be used with RSA and Digital Signature Algorithm (DSA) public keys.  <a class='info' href='#RFC5759'>[RFC5759]<span> (</span><span class='info'>Solinas, J. and L. Zieglar, &ldquo;Suite B Certificate and Certificate Revocation List (CRL) Profile,&rdquo; January&nbsp;2010.</span><span>)</span></a> provides additional guidance for ECDSA keys in Suite B X.509v3 certificate and certificate revocation list profiles.
 </p>
 <a name="pubkey-ext"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -615,7 +617,8 @@ Example</h3>
 <p>The following example illustrates the use of an X.509v3 certificate for a public key for the Digital Signature Algorithm when used in a Diffie-Hellman key exchange method.  In the example, there is a chain of certificates of length 2, and a single OCSP response is provided.
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
   byte    SSH_MSG_KEXDH_REPLY
-  string  0x00 0x00 0xXX 0xXX  -- length of the remaining data in this string
+  string  0x00 0x00 0xXX 0xXX  -- length of the remaining data in
+                                  this string
           0x00 0x00 0x00 0x0D  -- length of string "x509v3-ssh-dss"
           "x509v3-ssh-dss"
           0x00 0x00 0x00 0x02  -- there are 2 certificates
