draft-gellens-mime-bucket-bis-09

--- a/draft-gellens-mime-bucket-bis-09.html
+++ b/draft-gellens-mime-bucket-bis-09.html
@@ -365,7 +365,7 @@
 <link href="#rfc.section.4.1" rel="Chapter" title="4.1 Introduction">
 <link href="#rfc.section.4.2" rel="Chapter" title="4.2 Formal Declaration">
 <link href="#rfc.section.4.3" rel="Chapter" title="4.3 Profiles Parameter Definition">
-<link href="#rfc.section.4.4" rel="Chapter" title="4.4 Profiles for files carrying registered brands">
+<link href="#rfc.section.4.4" rel="Chapter" title="4.4 Profiles for files carrying MP4RA registered brands">
 <link href="#rfc.section.4.5" rel="Chapter" title="4.5 Profiles Parameter BNF Definition">
 <link href="#rfc.section.5" rel="Chapter" title="5 IANA Considerations">
 <link href="#rfc.section.6" rel="Chapter" title="6 Registration">
@@ -417,12 +417,12 @@
 <td class="right">P.F. Frojdh</td>
 </tr>
 <tr>
-<td class="left">Expires: January 30, 2012</td>
+<td class="left">Expires: February 04, 2012</td>
 <td class="right">Ericsson AB</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">July 29, 2011</td>
+<td class="right">August 03, 2011</td>
 </tr>
 
     	
@@ -430,18 +430,18 @@
   </table>
 
   <p class="title">The Codecs and Profiles Parameters for "Bucket" Media Types<br />
-  <span class="filename">draft-gellens-mime-bucket-bis-08.txt</span></p>
+  <span class="filename">draft-gellens-mime-bucket-bis-09.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Several MIME type/subtype combinations exist that can contain different media formats.  A receiving agent thus needs to examine the details of such media content to determine if the specific elements can be rendered given an available set of codecs.  Especially when the end system has limited resources, or the connection to the end system has limited bandwidth, it is helpful to know from the Content-Type alone if the content can be rendered.  </p>
-<p>This document specifies two parameters, "codecs" and "profiles", which are used with various MIME types or type/subtype combinations to allow for unambiguous specification of the codecs and/or profiles employed by the media formats contained within. This document obsoletes RFC 4281; RFC 4281 defines the "codecs" parameter, which this document retains in a backwards compatible manner with minor clarifications; the "profiles" parameter is added by this document.  </p>
+<p>This document specifies two parameters, "codecs" and "profiles", which are used with various MIME types or type/subtype combinations to allow for unambiguous specification of the codecs employed by the media formats contained within, or the profile(s) of the overall container format. This document obsoletes RFC 4281; RFC 4281 defines the "codecs" parameter, which this document retains in a backwards compatible manner with minor clarifications; the "profiles" parameter is added by this document.  </p>
 <p>By labeling content with the specific codecs indicated to render the contained media, receiving systems can determine if the codecs are supported by the end system, and if not, can take appropriate action (such as rejecting the content, sending notification of the situation, transcoding the content to a supported type, fetching and installing the required codecs, further inspection to determine if it will be sufficient to support a subset of the indicated codecs, etc.)</p>
 <p>Similarly, the profiles can provide an overall indication, to the receiver, of the specifications with which the content complies. This is an indication of the compatibility of the container format and its contents to some specification. The receiver may be able to work out the extent to which it can handle and render the content by examining to see which of the declared profiles it supports, and what they mean.</p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on January 30, 2012.</p>
+<p>This Internet-Draft will expire on February 04, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -479,7 +479,7 @@
 </li>
 <li>4.3.   <a href="#rfc.section.4.3">Profiles Parameter Definition</a>
 </li>
-<li>4.4.   <a href="#rfc.section.4.4">Profiles for files carrying registered brands</a>
+<li>4.4.   <a href="#rfc.section.4.4">Profiles for files carrying MP4RA registered brands</a>
 </li>
 <li>4.5.   <a href="#rfc.section.4.5">Profiles Parameter BNF Definition</a>
 </li>
@@ -727,7 +727,8 @@
 <h1 id="rfc.section.4.1">
 <a href="#rfc.section.4.1">4.1.</a> Introduction</h1>
 <p id="rfc.section.4.1.p.1">Just as some codecs have a variety of profiles (subsets of their functionality within which a bitstream can be coded), so also some media files can be profiled, and be associated with one or more profile identifiers of the profiles to which they conform. These profiles can indicate features of the file format itself, which codecs may be present, the profiles of those codecs, and so on. It can be advantageous to a receiving system to know the overall file profile(s) of a file; indeed, under these circumstances it may not be necessary to know the codecs themselves if they are implied by the profile.</p>
-<p id="rfc.section.4.1.p.2">When the use of the profiles parameter is defined for a given format, that definition SHOULD indicate that it directly reflects information in the body-part, i.e. that it does not convey information beyond, or different from, what can be learnt by inspecting the body-part. Although a mismatch is not permitted by this specification, the body-part is definitive of the actual profiles; the parameter supplied here is informative.</p>
+<p id="rfc.section.4.1.p.2">The 'profiles' parameter reports on the profile(s) of the overall container format. A profile of the container format may have restrictions on not only the features of the container format itself, but also on what codecs may be included, and indeed have restrictions on the profiles of those codecs. The 'profiles' parameter does not, however, report directly any profiles of the contained media: when such codec-specific profiles are reported, this report is part of the 'codecs' parameter. The 'profiles' parameter reports only the profile(s) applying to the complete container.</p>
+<p id="rfc.section.4.1.p.3">When the use of the profiles parameter is defined for a given format, that definition SHOULD indicate that it directly reflects information in the body-part, i.e. that it does not convey information beyond, or different from, what can be learnt by inspecting the body-part. Although a mismatch is not permitted by this specification, the body-part is definitive of the actual profiles; the parameter supplied here is informative.</p>
 <h1 id="rfc.section.4.2">
 <a href="#rfc.section.4.2">4.2.</a> Formal Declaration</h1>
 <p id="rfc.section.4.2.p.1">This section adds a parameter to allow unambiguous specification of the profiles to which a file claims conformance.  This parameter is OPTIONAL in all current types to which it is added.</p>
@@ -762,7 +763,7 @@
 <a href="#rfc.section.4.3">4.3.</a> Profiles Parameter Definition</h1>
 <p id="rfc.section.4.3.p.1">The 'profiles' parameter is an OPTIONAL parameter that indicates one or more profiles to which the file claims conformance. Like the 'codecs' parameter described above, it may occur as either 'profiles' or 'profiles*', with the same encoding rules. The value is, as for the codecs parameter, a comma-separated list of profile identifiers. </p>
 <h1 id="rfc.section.4.4">
-<a href="#rfc.section.4.4">4.4.</a> Profiles for files carrying registered brands</h1>
+<a href="#rfc.section.4.4">4.4.</a> Profiles for files carrying MP4RA registered brands</h1>
 <p id="rfc.section.4.4.p.1">For any file format carrying a brand registered at the <a href="#MP4RA">MP4 Registration Authority</a> <cite title="NONE">[MP4RA]</cite>, notably files based on the ISO Base Media File Format <a href="#ISO14496-12">ISO/IEC 14496-12</a> <cite title="NONE">[ISO14496-12]</cite> and QuickTime movie files, the profiles parameter MUST list exactly the major brand, followed by the compatible-brands, as listed in the filetype box ('ftyp') or segment-type box ('styp'). The major-brand MUST be first, and MAY be removed from the compatible-brands list. (The file format requires that it be repeated in the compatible brands, but this requirement is relaxed here for compactness.)</p>
 <p id="rfc.section.4.4.p.2">An example might be profiles="mp41,isom,qvXt", indicating that MPEG-4 version 1 is the major brand and preferred use, that the file is compatible with the version of the base file format identified by 'isom', and that it is also compatible with the specification/profile 'qvXt' (whatever that may be).</p>
 <h1 id="rfc.section.4.5">
