draft-livingood-web-notification-08

--- a/draft-livingood-web-notification-08.html
+++ b/draft-livingood-web-notification-08.html
@@ -154,13 +154,13 @@
 <tr><td class="header">Internet Engineering Task Force</td><td class="header">C. Chung</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">A. Kasyanov</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">J. Livingood</td></tr>
-<tr><td class="header">Expires: December 8, 2010</td><td class="header">N. Mody</td></tr>
+<tr><td class="header">Expires: December 9, 2010</td><td class="header">N. Mody</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Comcast</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">B. Van Lieu</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Unaffiliated</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 6, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 7, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Example of an ISP Web Notification System<br />draft-livingood-web-notification-07</h1>
+<h1><br />Example of an ISP Web Notification System<br />draft-livingood-web-notification-08</h1>
 
 <h3>Abstract</h3>
 
@@ -181,7 +181,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 8, 2010.</p>
+This Internet-Draft will expire on December 9, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -879,7 +879,7 @@ Suggesting a Walled Garden As An Alternative</h3>
 <a name="rfc.section.14"></a><h3>14.&nbsp;
 Intended Next Steps</h3>
 
-<p>Unfortunately, no existing working group of the IETF is focused on issues of malware infection and related issues.  As a result, there is not a definite venue for this document so this has been submitted to the RFC Editor as an individual submission. While documentation and disclosure of this system is beneficial for the Internet community in and of itself, there are other benefits to having this document published.  One of those reasons is that members of the community, including members of the IETF, have a stable document to refer to in case of any potential new work that the community may undertake in the area of malware, security, and critical notification to end users.  It is also hoped that, in the tradition of a Request for Comment, other members of the community may be motivated to propose alternative systems or other improvements. In addition, the authors hope to be able to use this reference document with the World Wide Web Consortium (W3C) or other organization, to request the development of alternative or superior methods to provide critical web notifications, as recommended by a member of the Internet Engineering Steering Group (IESG).
+<p>Unfortunately, no existing working group of the IETF is focused on issues of malware infection and related issues.  As a result, there is not a definite venue for this document so this has been submitted to the RFC Editor as an individual submission. While documentation and disclosure of this system is beneficial for the Internet community in and of itself, there are other benefits to having this document published.  One of those reasons is that members of the community, including members of the IETF, have a stable document to refer to in case of any potential new work that the community may undertake in the area of malware, security, and critical notification to end users.  It is also hoped that, in the tradition of a Request for Comment, other members of the community may be motivated to propose alternative systems or other improvements.
 </p>
 <a name="anchor15"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -968,6 +968,8 @@ Document Change Log</h3>
 <p>
      			</p>
 <ul class="text">
+<li>-08 - One minor deletion, based on feedback from the RFC Editor
+</li>
 <li>-07 - Made modifications to accommodate concerns raised by the RFC Editor and his reviewers.  This includes CAPITALIZING all RFC 2119 language, adding more context and background to the requirements section, making the introduction more precise, making the document describe more of the actual implementation details, updating security considerations, and adding three new sections (12, 13, 14).
 </li>
 <li>-06 - Corrected WL/BL error
